--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django==1.8.7
 defusedxml==0.4.1
+Django==1.8.7
 django-allauth==0.24.1
+django-cors-headers==1.2.2
 oauthlib==1.0.3
 python3-openid==3.0.9
 requests==2.9.0
